# adibot

./: .gitignore  LICENSE  README.md
discord-bot/: .gitignore  README.md  bot-config-example.json  go.mod
discord-bot/cmd/bot/: bot.go
discord-bot/config/: config.go
discord-bot/llm/: llm.go
model-training/: .gitignore  README.md  convert_raw_data_to_jsonl.sh  discord_export_grouping.ipynb  pyproject.toml
