[tool.poetry]
name = "adibot"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Aditya <15635979+adityarathod@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
polars = {extras = ["timezone"], version = "^1.5.0"}


[tool.poetry.group.dev.dependencies]
mlx-lm = "^0.17.0"
jupyterlab = "^4.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
